objects/Project_Work_Orders__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Work Orders</relationshipLabel>
        <relationshipName>Project_Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Work Orders</relationshipLabel>
        <relationshipName>Project_Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <label>Projects</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Project Work Orders</relationshipLabel>
        <relationshipName>Project_Work_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Maintenance_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service/Maintenance Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Project Work Orders</relationshipLabel>
        <relationshipName>Project_Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Work Orders</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRWO-{000000}</displayFormat>
        <label>Project Work Orders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Work Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>